# connector-api/src/main/java/it/pagopa/selfcare/mscore/api/InstitutionConnector.java
@@ -1,5 +1,6 @@
 package it.pagopa.selfcare.mscore.api;
 
+import it.pagopa.selfcare.mscore.model.RelationshipState;
 import it.pagopa.selfcare.mscore.model.institution.Institution;
 
 import java.util.List;
@@ -14,4 +15,8 @@ public interface InstitutionConnector {
     void deleteById(String id);
 
     Optional<Institution> findByExternalId(String externalId);
+
+    List<Institution> findWithFilter(String externalId, String productId, List<RelationshipState> validRelationshipStates);
+
+    Optional<Institution> findById(String id);
 }
